--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starlightskinapi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Starlight SkinAPI Wrapper",
   "main": "dist/index.js",
   "scripts": {
@@ -14,9 +14,14 @@
   "homepage": "https://github.com/rinckodev/starlightskinapi#readme",
   "types": "./types/index.d.ts",
   "keywords": [
-    "minecraft", "skin", "render",
-    "api", "wrapper", "starlightskinapi",
-    "starlight", "skinapi"
+    "minecraft",
+    "skin",
+    "render",
+    "api",
+    "wrapper",
+    "starlightskinapi",
+    "starlight",
+    "skinapi"
   ],
   "author": "Rincko Dev (https://github.com/rinckodev)",
   "license": "ISC",
