--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,12 @@
 {
-    "compilerOptions": {
-      "lib": ["ESNext", "DOM"],
-      "target": "ESNext",
-      "module": "CommonJS",
-      "moduleResolution": "Node",
-      "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "skipLibCheck": true,
-      "skipDefaultLibCheck": true,
-      "resolveJsonModule": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "rootDir": "src",
-      "outDir": "dist",
-      "declaration": true,
-      "declarationDir": "types"
-    },
-    "include": [
-      "src"
-    ],
-  }
+  "compilerOptions": {
+    "noEmit": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+  },
+}
